# Windows-ASR-Controller

./: ASR.Manager.json  ASR.Manager.ps1  README.md  code.ps1
pypi/: LICENSE  README.md  pyproject.toml
pypi/windows_asr_controller/: app.py
pypi/windows_asr_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python/: pyproject.toml
python/windows_asr_controller.egg-info/: top_level.txt
